--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -14,8 +14,7 @@
 }
 
 .sidenav-nav {
-    background-color: #2037AC;
-    color: white;
+    color: black;
     padding: 20px;
 }
 
@@ -25,4 +24,7 @@
 }
 .content {
     padding: 50px;
+}
+.btn-danger {
+    background-color: red;
 }
