--- a/src/app/projects/project/project.component.html
+++ b/src/app/projects/project/project.component.html
@@ -7,7 +7,7 @@
 
     <mat-form-field>
         <mat-label>Description</mat-label>
-        <textarea matInput formControlName="description" required></textarea>
+        <textarea rows="8" matInput formControlName="description" required></textarea>
     </mat-form-field>
 
     <mat-form-field>
