--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -61,6 +61,75 @@
         <td mat-cell *matCellDef="let element"> {{element.technologies}} </td>
     </ng-container>
 
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Actions</th>
+        <td mat-cell *matCellDef="let element">
+            <button mat-button [routerLink]="['/projects', element.id]">
+                <mat-icon class="icon-edit">edit</mat-icon>
+            </button>
+            <button mat-button (click)="deleteProject(element.id)">
+                <mat-icon class="icon-delete">delete</mat-icon>
+            </button>
+        </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
+<div class="form-create">
+    <h2>Ajouter un projet</h2>
+    <form [formGroup]="projectForm" (ngSubmit)="createProject()">
+        <div>
+            <mat-form-field>
+                <mat-label>Nom</mat-label>
+                <input matInput formControlName="name" required>
+            </mat-form-field>
+
+            <mat-form-field>
+                <mat-label>Description</mat-label>
+                <textarea matInput formControlName="description" required></textarea>
+            </mat-form-field>
+
+            <mat-form-field>
+                <mat-label>Date</mat-label>
+                <input matInput formControlName="date" required>
+            </mat-form-field>
+
+            <mat-form-field>
+                <mat-label>Miniature</mat-label>
+                <input matInput formControlName="miniature" required>
+            </mat-form-field>
+
+            <mat-form-field>
+                <mat-label>Image 1</mat-label>
+                <input matInput formControlName="picture1" required>
+            </mat-form-field>
+
+            <mat-form-field>
+                <mat-label>Image 2</mat-label>
+                <input matInput formControlName="picture2" required>
+            </mat-form-field>
+
+            <mat-form-field>
+                <mat-label>Image 3</mat-label>
+                <input matInput formControlName="picture3" required>
+            </mat-form-field>
+
+            <mat-form-field>
+                <mat-label>Image 4</mat-label>
+                <input matInput formControlName="picture4" required>
+            </mat-form-field>
+
+            <mat-form-field>
+                <mat-label>Technologies</mat-label>
+                <input matInput formControlName="technologies" required>
+            </mat-form-field>
+        </div>
+
+        <div>
+            <button mat-button class="btn" [disabled]="!projectForm.valid">Sauvegarder</button>
+        </div>
+    </form>
+</div>
