--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,41 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+table {
+    width: 100%;
+    margin-bottom: 50px;
+}
+td, th {
+    padding: 20px !important;
+}
+.icon-edit {
+    color: orange;
+}
+.icon-delete {
+    color: red;
+}
+.btn {
+    color: white;
+    background-color: #2037AC;
+}
+.form-create {
+    width: 100%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+mat-form-field {
+    margin-right: 50px;
+    width: 400px;
+}
