--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,14 @@
 <div class="text-center">
     <h1>Bienvenue sur le back office du site de Jordan Bretton</h1>
+    <p>Pour accéder aux données cliquer sur les boutons ci-dessous ou le menu sur la gauche</p>
+</div>
+<div>
+    <div class="home-btn">
+        <button mat-button [routerLink]="['/menu']">Menu</button>
+        <button mat-button [routerLink]="['/pages']">Pages</button>
+        <button mat-button [routerLink]="['/experiences']">Expériences</button>
+        <button mat-button [routerLink]="['/parcours']">Parcours</button>
+        <button mat-button [routerLink]="['/projets']">Projets</button>
+        <button mat-button [routerLink]="['/messages']">Messages</button>
+    </div>
 </div>
