--- a/src/app/experiences/experiences.component.html
+++ b/src/app/experiences/experiences.component.html
@@ -1,49 +1,49 @@
-<h2>Liste des expériences</h2>
+<h2 *ngIf="experiences">Liste des expériences</h2>
 <table mat-table *ngIf="experiences" [dataSource]="experiences" class="mat-elevation-z8">
 
-    <!-- Position Column -->
+    <!-- Id Column -->
     <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> Id</th>
         <td mat-cell *matCellDef="let element" class="mat-column-id"> {{element.id}} </td>
     </ng-container>
 
-    <!-- Name Column -->
+    <!-- Company Column -->
     <ng-container matColumnDef="company">
         <th mat-header-cell *matHeaderCellDef> Entreprise</th>
         <td mat-cell *matCellDef="let element"> {{element.company}} </td>
     </ng-container>
 
-    <!-- Weight Column -->
+    <!-- Description Column -->
     <ng-container matColumnDef="description">
         <th mat-header-cell *matHeaderCellDef> Description</th>
         <td mat-cell *matCellDef="let element"> {{element.description.substring(0, 50)}} ...</td>
     </ng-container>
 
-    <!-- Symbol Column -->
+    <!-- Job Column -->
     <ng-container matColumnDef="job">
         <th mat-header-cell *matHeaderCellDef> Emploi</th>
         <td mat-cell *matCellDef="let element"> {{element.job}} </td>
     </ng-container>
 
-    <!-- Symbol Column -->
+    <!-- Languages Column -->
     <ng-container matColumnDef="languages">
         <th mat-header-cell *matHeaderCellDef> Languages</th>
         <td mat-cell *matCellDef="let element"> {{element.languages}} </td>
     </ng-container>
 
-    <!-- Symbol Column -->
+    <!-- Year Start Column -->
     <ng-container matColumnDef="yearStart">
         <th mat-header-cell *matHeaderCellDef> Date de début</th>
         <td mat-cell *matCellDef="let element"> {{element.yearStart}} </td>
     </ng-container>
 
-    <!-- Symbol Column -->
+    <!-- Year End Column -->
     <ng-container matColumnDef="yearEnd">
         <th mat-header-cell *matHeaderCellDef> Date de fin</th>
         <td mat-cell *matCellDef="let element"> {{element.yearEnd}} </td>
     </ng-container>
 
-    <!-- Symbol Column -->
+    <!-- Actions Column -->
     <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Actions</th>
         <td mat-cell *matCellDef="let element">
