--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,25 +1,31 @@
 <h2>Liste des pages</h2>
 <table mat-table *ngIf="pages" [dataSource]="pages" class="mat-elevation-z8">
 
-    <!-- Position Column -->
+    <!-- Id Column -->
     <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> Id</th>
         <td mat-cell *matCellDef="let element" class="mat-column-id"> {{element.id}} </td>
     </ng-container>
 
-    <!-- Name Column -->
+    <!-- Title Column -->
     <ng-container matColumnDef="title">
         <th mat-header-cell *matHeaderCellDef> Titre</th>
         <td mat-cell *matCellDef="let element"> {{element.title}} </td>
     </ng-container>
 
-    <!-- Weight Column -->
+    <!-- SubTitle Column -->
     <ng-container matColumnDef="subTitle">
         <th mat-header-cell *matHeaderCellDef> Sous-titre</th>
         <td mat-cell *matCellDef="let element"> {{element.subTitle}}</td>
     </ng-container>
 
-    <!-- Symbol Column -->
+    <!-- Description Column -->
+    <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef> Description</th>
+        <td mat-cell *matCellDef="let element"> {{element.description}}</td>
+    </ng-container>
+
+    <!-- Actions Column -->
     <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Actions</th>
         <td mat-cell *matCellDef="let element">
@@ -46,7 +52,11 @@
             </mat-form-field>
             <mat-form-field>
                 <mat-label>Sous-titre</mat-label>
-                <input matInput formControlName="subTitle" required>
+                <input matInput formControlName="subTitle">
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Description</mat-label>
+                <input matInput formControlName="description">
             </mat-form-field>
         </div>
 
